add base window and widget functional

--- a/Cpp/win/Makefile
+++ b/Cpp/win/Makefile
@@ -1,8 +1,13 @@
 CX = g++ -std=c++14 -W
 CC = gcc -std=c11 -s -W
+
 all: src
-	g++ *.o -o ipdet.exe
+	ar rc libTermUI.a *.o 
+	rm *.o
+	rm -f *.obj
 
 src:
-	$(CX) -c *.cpp 
+	$(CX) -lgdi32  -c *.cpp 
+
 #	$(CC) -W -c *.c
+
